--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>Sam's Theme color</title>
+    <title>Sam's Chrome Exension</title>
     <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 
